# ZZZL_nav2_real-world_application

./: .gitignore  GIT_GUIDE.md  QUICK_START.md  README.md  c.pgm  findings.md  progress.md  real_world_user_ISA.md  seasky.c  seasky.h  task_plan.md
RMserial-main/: README.md  acm_cat.py  mode_controller.py  occupy_stages.json  test_pub.py
RMserial-main/serial/: autostart.sh
RMserial-main/serial/serial_def_sdk/: CMakeLists.txt  README.md  package.xml
RMserial-main/serial/serial_def_sdk/include/serial/: base_controller.h  base_controller.h.txt
RMserial-main/serial/serial_def_sdk/launch/: serial.launch.py
RMserial-main/serial/serial_def_sdk/src/: base_controller.cpp  publisher.cpp
RMserial-main/serial/serial_def_sdk/uart/: DataType.c  DataType.h  SeaskyProtocol.cpp  SeaskyProtocol.hpp  SerialDriver.cpp  SerialDriver.hpp  crc16.c  crc16.h  crc8.c  crc8.h  seasky_communicator.cpp  uart.h
cod_-rm2026_-navigation-master/: .gitignore  README.md  frames_2026-07-09_18.27.45.gv  start_nav.sh
cod_-rm2026_-navigation-master/docs/: MAPPING_EVIDENCE_RUNBOOK.md  OPERATING_GUIDE.md  (+1 more)
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/: CMakeLists.txt  README.md  package.xml
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/config/: gz_bridge.yaml  livox_bridge.yaml  sim_nav2_params.yaml
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/env-hooks/: gazebo_model_path.dsv.in  gazebo_resource_path.dsv.in
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/launch/: _sim_common.py  gazebo_sim.launch.py  gazebo_slam.launch.py  sim_standalone.launch.py
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/maps/: rmul2026.yaml
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/resource/: cod_robot.urdf.xacro  empty_world.sdf
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/resource/models/livox_mid360/: model.config  model.sdf
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/resource/models/rmuc_2025/: model.config
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/resource/worlds/: empty_world.sdf  livox_test.sdf  rmuc_2024_world.sdf  rmul_2024_world.sdf
cod_-rm2026_-navigation-master/src/cod_gazebo_simulator/rviz/: gazebo_nav.rviz
cod_-rm2026_-navigation-master/src/goal_approach_controller/: CMakeLists.txt  goal_approach_controller_plugin.xml  package.xml
cod_-rm2026_-navigation-master/src/goal_approach_controller/src/: goal_approach_controller.cpp
cod_-rm2026_-navigation-master/src/pb_rm_interfaces/: CMakeLists.txt  package.xml
cod_-rm2026_-navigation-master/src/slam_dynamic_filter/: CMakeLists.txt  README.md  package.xml
cod_-rm2026_-navigation-master/src/slam_dynamic_filter/config/: pragmatic_filter.yaml  stage0_thresholds.yaml
cod_-rm2026_-navigation-master/src/slam_dynamic_filter/launch/: evidence_scan.launch.py  mapping_filter.launch.py
cod_-rm2026_-navigation-master/src/slam_dynamic_filter/scripts/: sdfctl  slam_dynamic_filter_node
cod_-rm2026_-navigation-master/src/slam_dynamic_filter/slam_dynamic_filter/: __init__.py  bag_reader.py  cli.py  constants.py  gate.py  metadata.py  metrics.py  online_node.py  preflight.py  recorder.py  session_filter.py
cod_-rm2026_-navigation-master/src/slam_dynamic_filter/test/: test_bag_reader.py  test_cli.py  test_constants.py  test_evidence_scan_launch.py  test_gate.py  test_mapping_filter_launch.py  test_metadata.py  test_metrics.py  test_online_node.py  test_preflight.py  test_production_mapping_opt_in.py  test_recorder.py  test_session_filter.py
cod_-rm2026_-navigation-master/src/slam_dynamic_filter/test/data/: invalid_manifest.json  static_wall_records.json
cod_-rm2026_-navigation-master/src/small_point_lio/: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
cod_-rm2026_-navigation-master/src/small_point_lio/.github/workflows/: humble.yml  humble_with_livox_driver.yml  jazzy.yml
cod_-rm2026_-navigation-master/src/small_point_lio/config/: mid360.yaml  unilidar_l2.yaml
cod_-rm2026_-navigation-master/src/small_point_lio/include/: param_deliver.h.in  pch.h
cod_-rm2026_-navigation-master/src/small_point_lio/launch/: small_point_lio.launch.py
cod_-rm2026_-navigation-master/src/small_point_lio/src/: small_point_lio_node.cpp  small_point_lio_node.hpp
cod_-rm2026_-navigation-master/src/small_point_lio/src/common/: common.h
cod_-rm2026_-navigation-master/src/small_point_lio/src/io/: pcd_io.cpp  pcd_io.h
cod_-rm2026_-navigation-master/src/small_point_lio/src/lidar_adapter/: base_lidar.h  custom_mid360_driver.h  livox_custom_msg.h  livox_pointcloud2.h  unitree_lidar.h
cod_-rm2026_-navigation-master/src/small_point_lio/src/small_point_lio/: eskf.h  estimator.cpp  estimator.h  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h  small_ivox.h  small_point_lio.cpp  small_point_lio.h  so3_math.h
cod_-rm2026_-navigation-master/src/small_point_lio/src/util/: pointcloud_mapping.cpp  pointcloud_mapping.h  voxelgrid_sampling.cpp  voxelgrid_sampling.h
cod_-rm2026_-navigation-master/src/waypoint_editor/: CMakeLists.txt  README.ja.md  README.md  USAGE_WITH_NAV2.md  USAGE_WITH_NAV2.zh.md  package.xml  plugin_description.xml
cod_-rm2026_-navigation-master/src/waypoint_editor/data/: sample_map.yaml  sample_wp.csv
cod_-rm2026_-navigation-master/src/waypoint_editor/include/waypoint_editor/: waypoint_editor_panel.hpp  waypoint_editor_tool.hpp
cod_-rm2026_-navigation-master/src/waypoint_editor/launch/: waypoint_editor.launch.py  waypoint_through_nav2.launch.py  waypoint_to_nav2.launch.py
cod_-rm2026_-navigation-master/src/waypoint_editor/rviz/: rviz_waypoint_editor.rviz
cod_-rm2026_-navigation-master/src/waypoint_editor/src/: waypoint_editor_panel.cpp  waypoint_editor_tool.cpp  waypoint_through_nav2.cpp  waypoint_to_nav2.cpp
config/: 99-cod-mcu-serial.rules
docs/: COD_CODE_WALKTHROUGH.md  HOST_SETUP_CHECKLIST.md  MCU_CODE_REVIEW.md  MCU_SEASKY_PROTOCOL.md  QUICK_START.md  architecture-guide.md  livox-debug-guide.md  nav2_code_fixes.md
rmu_gazebo_simulator-main/: .pre-commit-config.yaml
scripts/: record_bag.sh
(+82 files in other folders)
