<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_def_sdk</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1730307074@qq.com">jxhhbg</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend> 
  <depend>geometry_msgs</depend>
  <depend>std_mags</depend>
  <depend>nav_msgs</depend>
  <depend>def_msg</depend>
  <depend>vision_msg</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  <depend>pb_rm_interfaces</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend> 
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
