<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cod_gazebo_simulator</name>
  <version>0.1.0</version>
  <description>Gazebo simulation environment for COD RM2026 navigation testing</description>
  <maintainer email="user@example.com">COD Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <exec_depend>cod_bringup</exec_depend>
  <exec_depend>cpp_lidar_filter</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/resource/models"/>
  </export>
</package>
